--- a/css/main.css
+++ b/css/main.css
@@ -58,23 +58,74 @@ main {
 
 /* Footer */
 footer {
-    height: 85px;
+    min-height: 100px;
     width: 100%;
     max-width: 1220px;
     background-color: #333333;
     margin: auto;
     flex-shrink: 0;
 }
-footer section {
-    padding: 10px;
+
+@media screen and (max-width: 769px) {
+    footer section:first-child {
+        height: 70px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+    footer section a {
+        font-size: 1.2em;
+        order: 1;
+    }
+    footer section img {
+        order: 2;
+    }
+    footer section:last-child {
+        color: #FFFFFF;
+        display: flex;
+        justify-content: flex-end;
+        padding: 0 15px 15px 0;
+    }
 }
 
-/* Re-organize footer elements from this resolution down */
-@media (max-width: 1024) {
-
+@media screen and (min-width: 769px) {
+    footer section:first-child {
+        height: 70px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    footer section a {
+        font-size: 1.2em;
+    }
+    footer section:last-child {
+        color: #FFFFFF;
+        display: flex;
+        justify-content: flex-end;
+        padding: 0 15px 15px 0;
+    }
 }
 /* End Footer */
 
-/* Helper/Convenience classes */
+/* General */
+/* End General */
 
+/* Responsive helper classes */
+@media screen and (max-width: 768px) {
+    .hidden-mobile {
+        display: none !important;
+    }
+}
+
+@media screen and (min-width: 769px) {
+    .hidden-tablet {
+        display: none !important;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .hidden-desktop {
+        display: none !important;
+    }
+}
 /* End Helper/Convenience classes */
