--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@ nav .nav-content .nav-menu-link {
     position: absolute;
     width: 100%;
     z-index: 1;
-    top: 0;
+    top: -10px;
     display: flex;
     flex-direction: column;
 }
@@ -119,6 +119,18 @@ nav .nav-content .nav-menu-link {
 .nav-menu-link.active {
     color: #26B5AF;
 }
+
+@media (prefers-color-scheme: dark) {
+    body, html {
+      background: #4b4b4b;
+    }
+    html, body, p, span, h1, h2, h3, h4, h5, h6, header {
+        color: #AEAEAE;
+    }
+    .article-section {
+        box-shadow: 0px 0px 5px 3px #333333 !important;
+    }
+  }
 /* End Header */
 
 main {
@@ -218,7 +230,7 @@ footer {
     footer section:last-child {
         padding: 0;
         justify-self: right;
-        flex: 1;
+        min-width: 100px;
     }
     footer section:last-child span{
         padding: 6px;
