--- a/css/article.css
+++ b/css/article.css
@@ -1,5 +1,52 @@
 /* Main Content */
-.article-image {
+.article-section {
+    box-shadow: 0px 0px 23px 14px #efefef;
+}
+
+.article-section .article {
+    padding: 25px;
+    margin-bottom: 50px;
+}
+.article-section .article-header-image {
+    background-size: cover;
+    background-position-x: center;
+    height: 480px;
+}
+
+.article-section .article .article-paragraph-aside-image {
+    float: right;
+    margin-left: 5%;
+    width: 250px;
+    height: 250px;
+    background-position: center;
+    background-size: cover;
+}
+
+@media screen and (max-width: 769px) {
+    .article-section .article .article-paragraph-aside-image {
+        float: unset;
+        margin-left: 0;
+        width: 100%;
+        height: 250px;
+        background-position: top;
+    }
+
+    .article-section .article-header-image {
+        background-size: cover;
+        background-position-x: center;
+        height: 480px;
+    }
+}
+
+.article-section .article-video-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.article-section .article video {
+    max-width: 512px;
+    max-height: 288px;
     width: 100%;
 }
 
@@ -7,10 +54,12 @@
     text-align: right;
 }
 
-.gaming-article header{
-    text-align: center;
-}
-
-.gaming-article-summary {
-    text-align: justify;
+@media (prefers-color-scheme: dark) {
+    .article-section {
+        box-shadow: 0px 0px 5px 3px #333333 !important;
+        background-color: #7D7D7D;
+    }
+    .article * {
+        color: white;
+    }
 }
