--- a/css/inputs.css
+++ b/css/inputs.css
@@ -1,16 +1,4 @@
-/* 
-    Colours
-    primary: #E06666
-    secondary: #333333
-    primary-complement: #26B5AF
-
-    Dimensions and spatiality
-    Desktop width: 1220px
-    General padding: 10px
-*/
-
 /* Buttons */
-
 button {
     border-radius: 7px;
     border: none;
@@ -19,6 +7,13 @@ button {
     color: #FFFFFF;
     min-width: 124px;
 }
+button.disabled {
+    border: none;
+    background-color: #efefef;
+    color: grey;
+    cursor: not-allowed;
+}
+/* End Buttons */
 
 input,
 textarea {
@@ -30,7 +25,6 @@ input:focus,
 textarea:focus{
     outline-color: #b1eeec;
 }
-/* End Buttons */
 
 /* Forms */
 .horizontal-form {
